@@ -1,5 +1,9 @@
 * SVN *
 
+* add Mephisto.root javascript variable in case a mephisto site sets the relative_url_root
+
+* Allow Modules to use #include_into to dynamically mixin to loaded classes (plugin stuff)
+
 * Allow custom routes.
 
   Mephisto::Routing.connect_with map do
